@@ -16,7 +16,6 @@ import org.springframework.security.core.userdetails.UserDetails;
  * @author fabri
  */
 public class UsuarioPrincipal implements UserDetails {
-
     private String nombre;
     private String nombreUsuario;
     private String email;
@@ -32,14 +31,13 @@ public class UsuarioPrincipal implements UserDetails {
         this.authorities = authorities;
     }
 
-    public static UsuarioPrincipal build(Usuario usuario) {
+    public static UsuarioPrincipal build(Usuario usuario){
         List<GrantedAuthority> authorities = usuario.getRoles().stream()
-                .map(rol -> new SimpleGrantedAuthority(rol.getRolNombre().name()))
-                .collect(Collectors.toList());
+                .map(rol -> new SimpleGrantedAuthority(rol.getRolNombre().name())).collect(Collectors
+                        .toList());
         return new UsuarioPrincipal(usuario.getNombre(), usuario.getNombreUsuario(), usuario.getEmail(), usuario.getPassword(), authorities);
     }
 
-    //constructor
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
         return authorities;
